--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -139,30 +139,31 @@
 .work {
   display: flex;
   align-items: stretch;
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap: wrap;
+  gap: 3rem; // So they are evenly spaced like a grid almost
 
   &__container {
     background-image: linear-gradient(var(--color-secondary-dark), transparent);
     display: inline-block;
     flex: 0 0 40%;
-    margin: 3rem 0;
   }
 }
 
 // SINGLE SOCIAL LINK
 .social-link {
   transition: all 0.5s;
+
+  animation: wiggle 0.6s cubic-bezier(0, 0.77, 0.37, 0.86) 0s 1;
+
   a {
     display: inline-block;
     height: 15rem;
     width: 15rem;
+
     cursor: pointer;
 
     &:hover {
-      animation: wiggle 0.4s cubic-bezier(0, 0.77, 0.37, 0.86) 0s 1;
-    }
-    &:not(:hover) {
       animation: wiggle 0.4s cubic-bezier(0, 0.77, 0.37, 0.86) 0s 1;
     }
   }
